* tty_select() did not check for ICANON and therefore notified the select   listeners immediately if there was already something in the queue. Factored   out a tty_readable() out of tty_notify_if_available() that tty_select()   now uses. * This fixes bug #3148.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28687 a95241bf-73f2-0310-859d-f6bbb57e9c96